@@ -2,6 +2,7 @@
 v7.0.0-git
 ----------
 
+[jan] Show warning on S/MIME page if personal certificate has expired.
 [mjr] Improve support for vTodo iTip handling.
 [mms] Add resent information to message header display.
 [mms] Added an option to the mailboxList API call to force inclusion of
